<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"   
	android:layout_width="fill_parent"    
	android:layout_height="fill_parent"  
	android:background="#ffffff" 	
	>    	
	
	<TableRow>
		<ImageButton  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 		    
		    android:id="@+id/main_btn_search"
		    android:src="@drawable/search"
		    android:padding="20dip"	
		    android:background="#ffffff"	    
	    />   	    
	    <ImageButton  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 		    
		    android:id="@+id/main_btn_words"
		    android:src="@drawable/words"
		    android:padding="20dip"
		    android:background="#ffffff"
	    /> 
	    <ImageButton  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 		    
		    android:id="@+id/main_btn_learn"
		    android:src="@drawable/learn"
		    android:padding="20dip"	
		    android:background="#ffffff"	    
	    />              
	</TableRow>
	<TableRow>
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"   
		    android:id="@+id/main_tv_search"
		    android:text="@string/main_search"
		    android:padding="20dip"
		    android:gravity="center"	
		    android:background="#ffffff"
		    android:textColor="#000000"
		/>	
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"   
		    android:id="@+id/main_tv_words"
		    android:text="@string/main_words"
		    android:padding="20dip"	
		    android:gravity="center"
		    android:background="#ffffff"
		    android:textColor="#000000"
		/>	
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"   
		    android:id="@+id/main_tv_learn"
		    android:text="@string/main_learn"
		    android:padding="20dip"	
		    android:gravity="center"
		    android:background="#ffffff"
		    android:textColor="#000000"
		/>	
	</TableRow>
	<TableRow>
		<ImageButton  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 		    
		    android:id="@+id/main_btn_dict"
		    android:src="@drawable/dict"
		    android:padding="20dip"
		    android:background="#ffffff"
	    />
		 <ImageButton  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 		    
		    android:id="@+id/main_btn_setting"
		    android:src="@drawable/setting"
		    android:padding="20dip"
		    android:background="#ffffff"
	    />
	     <ImageButton  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 		    
		    android:id="@+id/main_btn_help"
		    android:src="@drawable/help"
		    android:padding="20dip"	
		    android:background="#ffffff"	    
	    />
	</TableRow>
	<TableRow>
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"   
		    android:id="@+id/main_tv_dict"
		    android:text="@string/main_dict"
		    android:padding="20dip"
		    android:gravity="center"
		    android:background="#ffffff"
		    android:textColor="#000000"	
		/>	
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"   
		    android:id="@+id/main_tv_setting"
		    android:text="@string/main_setting"
		    android:padding="20dip"	
		    android:gravity="center"
		    android:background="#ffffff"
		    android:textColor="#000000"
		/>	
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"   
		    android:id="@+id/main_tv_help"
		    android:text="@string/main_help"
		    android:padding="20dip"	
		    android:gravity="center"
		    android:background="#ffffff"
		    android:textColor="#000000"
		/>
	</TableRow>
</TableLayout>
